# veri-thesis

./: .gitignore  CachedText.json  GeneralSimilarityTest.py  README.md  SemanticCache.py  datapath_comp.txt  forward.sh  parquet_to_jsonl.py  repair.md  repair0506.md  report.md  requirements.txt  single_run.sh  small_set.json  submit_vllm_sbatch.sh  verilog-eval-result-log.txt  vllm_deploy.sh
agentic_ip_reuse/: IMPROVEMENTS_ROADMAP.md  README.md  __init__.py  agent.py  cli.py  pipeline.py  planning.py  prompts.py  pyproject.toml  rtl.py  serialization.py  types.py
agentic_ip_reuse/agentic_ip_reuse/: __init__.py  agent.py  artifacts.py  cli.py  grounding.py  hierarchical.py  json_utils.py  llm.py  prompts.py  repository.py  semantic_repository.py  tools.py  types.py  verilog_tools.py  web.py
agentic_ip_reuse/agentic_ip_reuse_web_runs/2c59bafb2e/: agent_result.json  module_decomposition.md  verification_plan.md
agentic_ip_reuse/agentic_ip_reuse_web_runs/b63b65c4a6/: agent_result.json  integration_plan.md  ip_reuse_matrix.md  requirements.md  result.json
agentic_ip_reuse/agentic_ip_reuse_web_runs/f7a56a6267/: agent_result.json
agentic_ip_reuse/agentic_ip_reuse_web_runs/f7f10a15aa/: agent_result.json  hierarchical_summary.json  requirements.md  (+5 more)
agentic_ip_reuse/examples/: ip_catalog.json
agentic_ip_reuse/scripts/: deploy_vllm_remote.sh
agentic_ip_reuse/stages/: large_spec_stages.py  retrieval_stages.py  verification_stages.py
agentic_ip_reuse/tests/: test_agent.py  test_cli.py  test_grounding.py  test_hierarchical.py  test_repository.py  test_verilog_tools.py
(+183 files in other folders)
